WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
95340
[Qt] Fix doc generation with make docs
https://bugs.webkit.org/show_bug.cgi?id=95340
Summary
[Qt] Fix doc generation with make docs
Simon Hausmann
Reported
2012-08-29 06:26:47 PDT
[Qt] Fix doc generation with make docs
Attachments
Patch
(2.17 KB, patch)
2012-08-29 06:29 PDT
,
Simon Hausmann
kenneth
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Hausmann
Comment 1
2012-08-29 06:29:56 PDT
Created
attachment 161211
[details]
Patch
Kenneth Rohde Christiansen
Comment 2
2012-08-29 06:31:42 PDT
Comment on
attachment 161211
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=161211&action=review
rs=me
> Source/WebKit/qt/docs/qtwebkit.qdocconf:14 > -indexes = $QTDIR/doc/html/qt.index > +#indexes = $QTDIR/doc/html/qt.index
why this?
Simon Hausmann
Comment 3
2012-08-29 06:41:21 PDT
Committed
r126998
: <
http://trac.webkit.org/changeset/126998
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug