[Qt] Fix doc generation with make docs https://bugs.webkit.org/show_bug.cgi?id=95340

Reviewed by Kenneth Rohde Christiansen.

Fix doc target, similar to what the other Qt 5 modules are using and comment out the indexes
line, because cross-referencing doesn't work right now and the use of the QTDIR environment
is wrong, too.

* docs/docs.pri:
* docs/qtwebkit.qdocconf:

git-svn-id: svn://svn.chromium.org/blink/trunk@126998 bbb929c8-8fbe-4397-9dbb-9b2b20218538