third_party/WebKit/Source/WebKit2/UIProcess/API/qt/qquickwebview.cpp
@@ -1451,13 +1451,8 @@ QQuickWebPage* QQuickWebViewExperimental::page()
 }
 
 /*!
-    \qmlclass WebView QWebView
+    \qmltype WebView
     \inqmlmodule QtWebKit 3.0
-*/
-
-/*!
-   \qmlmethod WebView(Item parent)
-   \brief Constructs a WebView with a parent.
 */
 
 QQuickWebView::QQuickWebView(QQuickItem* parent)
