third_party/WebKit/Source/WebKit/qt/docs/docs.pri
@@ -1,14 +1,13 @@
 FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
-unix {
-    QDOC = SRCDIR=$$PWD/../../.. OUTPUT_DIR=$${ROOT_BUILD_DIR} $$(QTDIR)/bin/qdoc3
+QDOC = $$QT.core.bins/qdoc
+
+$$unixstyle {
 } else {
-    QDOC = $$(QTDIR)\\bin\\qdoc3.exe
+    QDOC = $$replace(QDOC, "qdoc", "qdoc3.exe")
 }
 
-unix {
-    docs.commands = $$QDOC $$PWD/qtwebkit.qdocconf
-} else {
-    docs.commands = \"$$QDOC $$PWD/qtwebkit.qdocconf\"
-}
+QDOC = SRCDIR=$$PWD/../../.. OUTPUT_DIR=$${ROOT_BUILD_DIR} $$QDOC
+
+docs.commands = $$QDOC $$PWD/qtwebkit.qdocconf
 
 QMAKE_EXTRA_TARGETS += docs
